public interface AtaqueComun {
    public String lanzarKamehameha();
}
