public interface AutoDestruccion {
    public String autoDestruirse();

}
