public interface SubeNivel {
    public void aumentarKi();
}
